# my_crafts

./: CMakeLists.txt  README.md  project.properties
client/: CMakeLists.txt  client.cpp
server/: CMakeLists.txt  main.cpp
